# robosoccer

./: README  README.md
source/: .gitignore  CMakeLists.txt  Doxyfile.in  checkIncludeGuards.sh  prepare.sh  robosoccer.files  robosoccer.files.orig  robosoccer.includes  testCoverage.sh
source/common/: CMakeLists.txt
source/common/geometry/: CMakeLists.txt  angle.cpp  angle.h  angletest.cpp  angletest.h  circle.cpp  circle.h  circletest.cpp  circletest.h  compare.cpp  compare.h  comparetest.cpp  comparetest.h  line.cpp  line.h  linetest.cpp  linetest.h  orientedposition.cpp  orientedposition.h  orientedpositiontest.cpp  orientedpositiontest.h  owncolour.cpp  owncolour.h  owncolourtest.cpp  owncolourtest.h  path.cpp  path.h  pathintersectpoints.cpp  pathintersectpoints.h  pathintersectpointstest.cpp  pathintersectpointstest.h  pathtest.cpp  pathtest.h  point.cpp  point.h  pointdistancecompare.cpp  pointdistancecompare.h  pointdistancecomparetest.cpp  pointdistancecomparetest.h  pointtest.cpp  (+17 more)
source/common/logging/: CMakeLists.txt  logger.h  loggerimpl.cpp  loggerimpl.h  loggermock.cpp  loggermock.h  loggertest.cpp  loggertest.h
source/common/other/: CMakeLists.txt  compare.cpp  compare.h  comparetest.cpp  comparetest.h  console.cpp  console.h  pidcontroller.cpp  pidcontroller.h  pidcontrollertest.cpp  pidcontrollertest.h  quadraticequation.cpp  quadraticequation.h  quadraticequationtest.cpp  quadraticequationtest.h  randomdecision.cpp  randomdecision.h  randomdecisiontest.cpp  randomdecisiontest.h  segfaultstacktraceprinter.cpp  segfaultstacktraceprinter.h  signum.h  signumtest.cpp  signumtest.h
source/common/routing/: CMakeLists.txt  fieldpositionchecker.h  fieldpositioncheckermock.cpp  fieldpositioncheckermock.h  route.cpp  route.h  routelengthcompare.cpp  routelengthcompare.h  routelengthcomparetest.cpp  routelengthcomparetest.h  router.h  routerimpl.cpp  routerimpl.h  routermock.cpp  routermock.h  routertest.cpp  routertest.h  routetest.cpp  routetest.h  routingobstacle.cpp  routingobstacle.h  routingobstacletest.cpp  routingobstacletest.h  routingresult.cpp  routingresult.h  routingresulttest.cpp  routingresulttest.h
source/common/states/: CMakeLists.txt  state.cpp  state.h  statemachine.cpp  statemachine.h  statemachinetest.cpp  statemachinetest.h  statemock.cpp  statemock.h  statetest.cpp  statetest.h
source/common/time/: CMakeLists.txt  stopwatch.cpp  stopwatch.h  stopwatchtest.cpp  stopwatchtest.h  watch.h  watchimpl.cpp  watchimpl.h  watchmock.cpp  watchmock.h  watchtest.cpp  watchtest.h
source/layer/: CMakeLists.txt
source/layer/abstraction/: CMakeLists.txt  ball.h  ballimpl.cpp  ballimpl.h  ballmock.cpp  ballmock.h  controllablerobot.h  controllablerobotimpl.cpp  controllablerobotimpl.h  controllablerobotmock.cpp  controllablerobotmock.h  fieldpositionchecker.cpp  fieldpositionchecker.h  fieldpositioncheckerfieldplayer.cpp  fieldpositioncheckerfieldplayer.h  fieldpositioncheckerfieldplayertest.cpp  fieldpositioncheckerfieldplayertest.h  fieldpositioncheckergoalkeeper.cpp  fieldpositioncheckergoalkeeper.h  fieldpositioncheckergoalkeepertest.cpp  fieldpositioncheckergoalkeepertest.h  fieldpositioncheckermock.cpp  fieldpositioncheckermock.h  fieldpositioncheckertest.cpp  fieldpositioncheckertest.h  fieldside.cpp  fieldside.h  readablerobot.cpp  readablerobot.h  readablerobotimpl.cpp  readablerobotimpl.h  readablerobotmock.cpp  readablerobotmock.h  referee.h  refereebase.h  refereeimpl.cpp  refereeimpl.h  refereemock.cpp  refereemock.h  robotdrivecontrol.cpp  (+19 more)
source/layer/autonomous/: CMakeLists.txt  enemyteam.cpp  enemyteam.h  enemyteamimpl.cpp  enemyteamimpl.h  enemyteammock.cpp  enemyteammock.h  enemyteamtest.cpp  enemyteamtest.h  intelligentball.cpp  intelligentball.h  intelligentball.h.orig  intelligentballimpl.cpp  intelligentballimpl.h  intelligentballmock.cpp  intelligentballmock.h  intelligentballtest.cpp  intelligentballtest.h  obstaclefetcher.cpp  obstaclefetcher.h  obstaclefetcherimpl.cpp  obstaclefetcherimpl.h  obstaclefetchermock.cpp  obstaclefetchermock.h  obstaclefetchertest.cpp  obstaclefetchertest.h  obstaclesource.h  obstaclesourcemock.cpp  obstaclesourcemock.h  robot.h  robotimpl.cpp  robotimpl.h  robotmock.cpp  robotmock.h  robotstate.cpp  robotstate.h  robotstatedriveto.cpp  robotstatedriveto.h  robotstatedrivetodirect.cpp  robotstatedrivetodirect.h  (+44 more)
source/layer/control/: CMakeLists.txt  kickoffdefensive.cpp  kickoffdefensive.h  kickoffdefensivetest.cpp  kickoffdefensivetest.h  kickoffoffensive.cpp  kickoffoffensive.h  kickoffoffensivetest.cpp  kickoffoffensivetest.h  pause.cpp  pause.h  pausetest.cpp  pausetest.h  penaltydefensive.cpp  penaltydefensive.h  penaltydefensivetest.cpp  penaltydefensivetest.h  penaltyoffensive.cpp  penaltyoffensive.h  penaltyoffensivetest.cpp  penaltyoffensivetest.h  play.cpp  play.h  playtest.cpp  playtest.h  preparekickoff.cpp  preparekickoff.h  preparekickoffdefensive.cpp  preparekickoffdefensive.h  preparekickoffdefensivetest.cpp  preparekickoffdefensivetest.h  preparekickoffoffensive.cpp  preparekickoffoffensive.h  preparekickoffoffensivetest.cpp  preparekickoffoffensivetest.h  preparekickofftest.cpp  preparekickofftest.h  preparepenalty.cpp  preparepenalty.h  preparepenaltydefensive.cpp  (+66 more)
source/layer/main/: CMakeLists.txt  application.cpp  application.cpp.orig  application.h  applicationtest.cpp  applicationtest.h  fieldpositionchecker.cpp  fieldpositionchecker.h  fieldpositioncheckerfieldplayer.cpp  fieldpositioncheckerfieldplayer.h  fieldpositioncheckerfieldplayertest.cpp  fieldpositioncheckerfieldplayertest.h  fieldpositioncheckergoalkeeper.cpp  fieldpositioncheckergoalkeeper.h  fieldpositioncheckergoalkeepertest.cpp  fieldpositioncheckergoalkeepertest.h  inputargumentparser.cpp  inputargumentparser.h  inputargumentparsertest.cpp  inputargumentparsertest.h  intelligentball.cpp  intelligentball.h  ownteamcolour.h.autosave  (+6 more)
source/main/: CMakeLists.txt  main.cpp  mainabstractiontest.cpp  mainautonomoustest.cpp  maincontroltest.cpp  mainstartpositiondemo.cpp  maintestrunner.cpp  testregistration.cpp
(+140 files in other folders)
